set(TEST_SCANNER_RUNNER_NAME "test_scanner")

set(TEST_RUNNER_INCLUDE_DIRS
    "${PROJECT_SOURCE_DIR}/tests"
    "${PROJECT_SOURCE_DIR}/src"
)

set(TEST_RUNNER_SOURCES
    ${KORE_AST_SOURCES}
    ${KORE_AST_EXPRESSION_SOURCES}
    ${KORE_AST_STATEMENT_SOURCES}
    ${KORE_SCANNER_SOURCES}
    ${KORE_PARSER_SOURCES}
    ${KORE_TYPE_SOURCES}
    ${KORE_LOGGING_SOURCES}
    ${KORE_KIR_SOURCES}
    ${KORE_ERRORS_SOURCES}
    ${KORE_UTF8_SOURCES}
    ${KORE_UTILS_SOURCES}
    ${KORE_TARGETS_BYTECODE_SOURCES}
    ${KORE_ANALYSIS_SOURCES}

    # Files specific to scanner test runner
    test_utils.cpp
    scanner/test_literals.cpp
    main.cpp
)

add_executable(${TEST_SCANNER_RUNNER_NAME} ${TEST_RUNNER_SOURCES})

target_include_directories(
    ${TEST_SCANNER_RUNNER_NAME}
    PRIVATE
    ${TEST_RUNNER_INCLUDE_DIRS}
)

target_compile_options(${TEST_SCANNER_RUNNER_NAME} PUBLIC ${KORE_SHARED_COMPILE_FLAGS})

set_target_properties(
    ${TEST_SCANNER_RUNNER_NAME}
    PROPERTIES RUNTIME_OUTPUT_DIRECTORY
    "${CMAKE_BINARY_DIR}/tests/bin"
)
